# Project

./: check_db.py  test_openai.py
local-sec-insights/backend/: .env.development  .env.docker  .env.local  Makefile  docker-compose.yml  pyproject.toml
local-sec-insights/backend/alembic/versions/: 774d3390b68a_update_vector_dimension.py
local-sec-insights/backend/app/api/endpoints/: documents.py
local-sec-insights/backend/app/chat/: engine.py
local-sec-insights/backend/app/core/: config.py  llm_config.py
local-sec-insights/backend/app/db/: session.py
local-sec-insights/backend/app/llm/: ollama_adapter.py
local-sec-insights/backend/scripts/: seed_db.py  seed_storage_context.py  upsert_db_sec_documents.py
local-sec-insights/frontend/src/: constants.ts
local-sec-insights/frontend/src/api/: backend.tsx
local-sec-insights/frontend/src/components/landing-page/: SelectTicker.tsx
local-sec-insights/frontend/src/pages/: _app.tsx
